force-app/main/default/objects/Milestone1_Time__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <inlineHelpText>The number of hours charged. Note: This cannot be more than 1 day (24 hours).</inlineHelpText>
    <label>Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>