force-app/main/default/objects/Milestone1_Time__c/fields/ImportID__c.field-meta.xml
<CustomField>
    <fullName>ImportID__c</fullName>
    <label>ImportID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>