force-app/main/default/objects/Milestone1_Time__c/fields/Project_Task__c.field-meta.xml
<CustomField>
    <fullName>Project_Task__c</fullName>
    <inlineHelpText>The task that is having time charged to it.</inlineHelpText>
    <label>Project Task</label>
    <referenceTo>Milestone1_Task__c</referenceTo>
    <relationshipLabel>Times</relationshipLabel>
    <relationshipName>Project_Times</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>