force-app/main/default/objects/Milestone1_Time__c/validationRules/Hours_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Hours_Not_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Hours__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>Hours__c</errorDisplayField>
    <errorMessage>The hours entered cannot be negative.</errorMessage>
</ValidationRule>